Tweak footnote placement

--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -249,15 +249,7 @@ Our objective has structure amenable to global optimization via a branch-and-bou
 In particular, we make a series of important observations that each translates into
 a useful bound, and together interact to eliminate large parts of the search space.
 %
-We will discuss these in depth throughout the following
-\begin{arxiv}
-sections:
-\end{arxiv}
-\begin{kdd}
-sections:~\footnote{Due to page constraints, we include only a few
-relevant proofs; we include additional theorems and all proofs
-in a long version of this report.}
-\end{kdd}
+We will discuss these in depth throughout the following sections:
 %
 \begin{itemize}
 \item Lower bounds on a prefix also hold for every extension of that prefix.
@@ -295,7 +287,13 @@ we know that any model will make mistakes.
 In particular, the number of mistakes on these observations will be at least
 the number of observations with the minority label.
 (\S\ref{sec:identical}, Theorem~\ref{thm:identical})
+\begin{kdd}
+\footnote{Due to page constraints, we include only a few
+relevant proofs; we include additional theorems and all proofs
+in a long version of this report.}
+\end{kdd}
 \end{itemize}
+
 
 \subsection{Hierarchical objective lower bound}
 \label{sec:hierarchical}
