--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -289,7 +289,7 @@ the number of observations with the minority label.
 (\S\ref{sec:identical}, Theorem~\ref{thm:identical})
 \begin{kdd}
 \footnote{Due to page constraints, we include only a few
-relevant proofs; we include additional theorems and all proofs
+relevant proofs; we present additional theorems and all proofs
 in a long version of this report.}
 \end{kdd}
 \end{itemize}
