--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -275,7 +275,7 @@ and Proposition~\ref{prop:trivial-length} gives~\eqref{eq:max-length-prefix}.
 
 We can view Theorem~\ref{thm:ub-prefix-specific} as a generalization
 of our one-step lookahead bound (Lemma~\ref{lemma:lookahead});
-rearranging to obtain a bound on~${K' - K}$
+rearranging to obtain a bound on ${K' - K}$
 gives an upper bound on the number of remaining `steps' corresponding to
 \begin{arxiv}
 an iterative
