--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -44,7 +44,7 @@ and let~${x_{n,j}}$ denote the $j$-th feature of~$x_n$.
 %where ${\Prefix = (p_1, \dots, p_K)}$
 %and ${\Labels = (q_1, \dots, q_K)}$.}
 \caption{An example 3-rule list ${\RL = (r_1, r_2, r_3, r_0)}$
-that predicts two-year recidivism for the COMPAS dataset.
+that predicts two-year recidivism for the ProPublica dataset.
 Each rule is of the form ${r_k = p_k \rightarrow q_k}$,
 for all ${k = 0, \dots, 3}$.
 We also equivalently write ${\RL = (\Prefix, \Labels, \Default, K)}$,
