Minor tweaks to experiments; switching to implementation.

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -67,7 +67,7 @@ Our experimental analysis addresses four questions:
 (3) How rapidly does CORELS prune the search space?
 (4) How much does each of the implementation optimizations contribute to CORELS' performance?
 
-All results presented use the ProPublica dataset unless otherwise noted,
+All results presented use the ProPublica dataset, unless otherwise noted,
 and were executed on a server with two Intel Xeon E5-2699~v4
 (55M~cache, 2.20~GHz) processors and 448GB~RAM.
 %
@@ -128,7 +128,7 @@ and are labeled by the new length.
 A star marks the optimum.
 %
 % A separate execution of
-CORELS without the equivalent points bound remains from complete,
+CORELS without the equivalent points bound remains far from complete,
 and its lower bound (dashed line) far from the optimum.
 %
 Bottom: $\lfloor \log_{10} \Remaining(\CurrentObj, \Queue) \rfloor$,
