--- a/paper/sections/implementation.tex
+++ b/paper/sections/implementation.tex
@@ -28,17 +28,17 @@ permutations map to the same key.
 % The set of captured entries is identical for a given set of rules, independent of ordering, so
 % different permutations still map to the same key.
 %
-Note that encodings of rule lists in canonical order tend to be
-significantly smaller than encodings of captured data points,
-especially for large datasets.
+% Note that encodings of rule lists in canonical order tend to be
+% significantly smaller than encodings of captured data points,
+% especially for large datasets.
 %
 In general, the symmetry-aware map dominates memory usage during long runs.
 Before inserting permutation $P_i$ into the symmetry-aware map, we check
-if there exists a permutation $P_j$ of $P_i$ alread in the map.
+if there exists a permutation $P_j$ of $P_i$ already in the map.
 If the objective of $P_i$ is better than the objective of $P_j$,
 we update the map and remove $P_j$ and its subtree from the trie.
 Otherwise we do nothing (i.e., we do not insert $P_i$ into the symmetry-aware map
-or the trie.
+or the trie).
 
 We use a queue to store all of the leaves of the trie that still need to be explored.
 We order entries in the queue to implement several different scheduling policies,
