--- a/paper/kdd17.tex
+++ b/paper/kdd17.tex
@@ -53,37 +53,43 @@
 \email{elaine@eecs.berkeley.edu}
 
 \author{Nicholas Larus-Stone}
-%\authornote{The secretary disavows any knowledge of this author's actions.}
 \affiliation{%
-  \institution{SEAS, Harvard University}
-  %\streetaddress{}
-  \city{Cambridge} 
-  \state{MA} 
-  \postcode{02138}
+ \institution{SEAS, Harvard University}
+ \city{Cambridge}
+ \state{MA}
+ \postcode{02138}
 }
 \email{nlarusstone@college.harvard.edu}
 
 \author{Daniel Alabi}
-%\authornote{The secretary disavows any knowledge of this author's actions.}
 \affiliation{%
-  \institution{SEAS, Harvard University}
-  %\streetaddress{}
-  \city{Cambridge} 
-  \state{MA} 
-  \postcode{02138}
+ \institution{SEAS, Harvard University}
+ \city{Cambridge}
+ \state{MA}
+ \postcode{02138}
 }
 \email{alabid@g.harvard.edu}
 
 \author{Margo Seltzer}
-%\authornote{The secretary disavows any knowledge of this author's actions.}
-\affiliation{%
-  \institution{SEAS, Harvard University}
-  %\streetaddress{}
-  \city{Cambridge} 
-  \state{MA} 
-  \postcode{02138}
-}
+ \affiliation{%
+   \institution{SEAS, Harvard University}
+   \city{Cambridge} 
+   \state{MA} 
+   \postcode{02138}
+ }
 \email{margo@eecs.harvard.edu}
+
+% COMPRESSED VERSION OF HARVARD AUTHORS
+%\author{Nicholas Larus-Stone}
+%\author{Daniel Alabi, Margo Seltzer}
+%\affiliation{%
+%  \institution{SEAS, Harvard University}
+%  \city{Cambridge}
+%  \state{MA}
+%  \postcode{02138}
+%\streetaddress{nlarusstone@college.harvard.edu}
+%\streetaddress{\{alabid@g, margo@eecs\}.harvard.edu}
+%}
 
 \author{Cynthia Rudin}
 \affiliation{%
