--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -62,7 +62,9 @@ and complexity parameters~$cp$ and~$C$, respectively.
 Markers and error bars indicate means and standard deviations, respectively,
 across cross-validation folds.
 %
-No models exhibit significant overfitting -- training accuracy
+None of the models exhibit significant overfitting;
+mean training accuracy never exceeds mean test accuracy
+by more than about 0.01 (not pictured).
 }
 \label{fig:sparsity}
 \end{figure}
