Add the frisk sparsity plot for now

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -824,6 +824,12 @@ title = "{UCI} Machine Learning Repository",
 note={\url{http://archive.ics.uci.edu/ml}},
 institution = "University of California, Irvine, School of Information and Computer Sciences" }
 
+@misc{nyclu:2014,
+title = "Stop-and-Frisk Data",
+note = {\url{http://www.nyclu.org/content/stop-and-frisk-data}},
+author = "New York Civil Liberties Union",
+year = 2014
+}
 
 @InProceedings{Simon11,
 author = {Gy\"{o}rgy J. Simon and Vipin Kumar and Peter W. Li},
