Are folks ok with this author listing?  It saves space!!
Alternatively, I'd be happy to cut someting -- the experiments
section in particular is still quite in flux

--- a/paper/kdd17.tex
+++ b/paper/kdd17.tex
@@ -52,44 +52,44 @@
 }
 \email{elaine@eecs.berkeley.edu}
 
-\author{Nicholas Larus-Stone}
-\affiliation{%
- \institution{SEAS, Harvard University}
- \city{Cambridge}
- \state{MA}
- \postcode{02138}
-}
-\email{nlarusstone@college.harvard.edu}
-
-\author{Daniel Alabi}
-\affiliation{%
- \institution{SEAS, Harvard University}
- \city{Cambridge}
- \state{MA}
- \postcode{02138}
-}
-\email{alabid@g.harvard.edu}
-
-\author{Margo Seltzer}
- \affiliation{%
-   \institution{SEAS, Harvard University}
-   \city{Cambridge} 
-   \state{MA} 
-   \postcode{02138}
- }
-\email{margo@eecs.harvard.edu}
+%\author{Nicholas Larus-Stone}
+%\affiliation{%
+% \institution{SEAS, Harvard University}
+% \city{Cambridge}
+% \state{MA}
+% \postcode{02138}
+%}
+%\email{nlarusstone@college.harvard.edu}
+%
+%\author{Daniel Alabi}
+%\affiliation{%
+% \institution{SEAS, Harvard University}
+% \city{Cambridge}
+% \state{MA}
+% \postcode{02138}
+%}
+%\email{alabid@g.harvard.edu}
+%
+%\author{Margo Seltzer}
+% \affiliation{%
+%   \institution{SEAS, Harvard University}
+%   \city{Cambridge} 
+%   \state{MA} 
+%   \postcode{02138}
+% }
+%\email{margo@eecs.harvard.edu}
 
 % COMPRESSED VERSION OF HARVARD AUTHORS
-%\author{Nicholas Larus-Stone}
-%\author{Daniel Alabi, Margo Seltzer}
-%\affiliation{%
-%  \institution{SEAS, Harvard University}
-%  \city{Cambridge}
-%  \state{MA}
-%  \postcode{02138}
-%\streetaddress{nlarusstone@college.harvard.edu}
-%\streetaddress{\{alabid@g, margo@eecs\}.harvard.edu}
-%}
+\author{Nicholas Larus-Stone}
+\author{Daniel Alabi, Margo Seltzer}
+\affiliation{%
+ \institution{SEAS, Harvard University}
+ \city{Cambridge}
+ \state{MA}
+ \postcode{02138}
+\streetaddress{nlarusstone@college.harvard.edu}
+\streetaddress{\{alabid@g, margo@eecs\}.harvard.edu}
+}
 
 \author{Cynthia Rudin}
 \affiliation{%
