--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -178,7 +178,7 @@ is the upper bound on remaining search space size
 \label{fig:objective}
 \end{figure}
 
-\begin{table}[b!]
+\begin{table}[t!]
 \centering
 %\small
 \resizebox{0.49\textwidth}{!}{
