--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -451,4 +451,4 @@ rule list~${\RL' \in \StartsWith(\Prefix)}$ whose prefix~$\Prefix'$ starts with~
 For the objective of such a rule list, the current best objective
 provides a lower bound, \ie
 ${\Obj(\RL', \x, \y) \ge b(\Prefix', \x, \y) \ge}$ ${b(\Prefix, \x, \y) \ge \CurrentObj}$,
-and thus~$\RL'$ cannot be optimal. \\
+and thus~$\RL'$ cannot be optimal.
