--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -77,7 +77,7 @@ by more than about 0.01 (not pictured).
 \end{arxiv}
 \begin{kdd}
 % left lower right upper
-\includegraphics[trim={20mm, 10mm, 20mm, 20mm}, width=0.45\textwidth]{figs/frisk-sparsity.pdf}
+\includegraphics[trim={20mm, 10mm, 20mm, 15mm}, width=0.45\textwidth]{figs/frisk-sparsity.pdf}
 \end{kdd}
 \end{center}
 \caption{Test accuracy as a function of model size,
@@ -126,8 +126,8 @@ to those found via other algorithms.
 %
 Figure~\ref{fig:rule-list} shows an optimal rule list learned in one of the folds.
 %
-Figure~\ref{fig:sparsity} shows that CORELS can learn short rule lists without
-sacrificing accuracy.
+Figures~\ref{fig:sparsity} and~\ref{fig:frisk-sparsity} show that CORELS
+can learn short rule lists without sacrificing accuracy.
 
 Figure~\ref{fig:objective} illustrates how both the objective and the size of
 the remaining search space decrease as CORELS executes.
