Add note about RIPPER -- didn't work for frisk?

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -87,7 +87,8 @@ We use the New York Civil Liberties Union's 2014 stop-and-frisk dataset~\cite{ny
 to predict whether a weapon will be found on stopped individual
 who is frisked or searched.
 %
-We do not depict C4.5, which finds models with $>1000$ leaves
+We do depict neither RIPPER, which we were unable to execute,
+nor C4.5, which finds models with $>1000$ leaves
 and dramatically overfits for all tested parameters.
 %
 The other models do not significantly overfit, except for CART with ${cp = 0.001}$.
