Pass over implementation section
Have to be careful about prefix vs rule list, and rules vs
antecedents ;-)

--- a/paper/sections/incremental.tex
+++ b/paper/sections/incremental.tex
@@ -8,9 +8,16 @@ Algorithm~\ref{alg:branch-and-bound}'s execution, we compute
 the objective lower bound~${b(\Prefix, \x, \y)}$ and, sometimes,
 the objective~${\Obj(\RL, \x, \y)}$ of the corresponding rule list~$\RL$.
 %
-These calculations are the dominant computations with respect to execution time.
+These calculations are the dominant
+\begin{arxiv}
+computations with respect to execution time.
 %
-This motivates our use of a highly optimized library,
+This motivates
+\end{arxiv}
+\begin{kdd}
+computations, and motivate
+\end{kdd}
+our use of a highly optimized library,
 designed by~\citet{YangRuSe16} for representing rule lists and
 performing operations encountered in evaluating functions of rule lists.
 %
