fixed one-word typo in relatd work

--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -39,7 +39,7 @@ A particularly interesting paper along these lines is that of \citet{NijssenFrom
 \textit{Greedy splitting and pruning:} Unlike optimal decision tree methods, methods like
 CART \citep{Breiman84} and C4.5 \citep{Quinlan93} do not perform exploration of the search space beyond greedy splitting. There are a huge number of algorithms in this class.
 
-\textit{Bayesian tree and rule list methods}: Some of these methods that aim to explore the space of trees \citep{Dension:1998hl,Chipman:2002hc,Chipman10} using Monte Carlo exploration methods, however, the space of trees of a given depth is much larger than the space of rule lists of that same level of depth, and the trees within these algorithms are grown in a top-down greedy way. Because of this, the authors noted that the MCMC chain tends to reach only locally optimal solutions. This explains why Bayesian rule-based methods \citep{LethamRuMcMa15,YangRuSe16} have tended to be more successful in escaping local minima. Our work builds specifically on that of \citet{YangRuSe16}. In particular, we use their efficient bit-vector representation and build on their bounds. Note that the 1995 RIPPER algorithm \cite{ripper} is similar to the Bayesian tree methods in that it grows, prunes, and then locally optimizes.
+\textit{Bayesian tree and rule list methods}: Some of these methods that aim to explore the space of trees \citep{Dension:1998hl,Chipman:2002hc,Chipman10} use Monte Carlo exploration methods. However, the space of trees of a given depth is much larger than the space of rule lists of that same level of depth, and the trees within these algorithms are grown in a top-down greedy way. Because of this, the authors noted that the MCMC chain tends to reach only locally optimal solutions. This explains why Bayesian rule-based methods \citep{LethamRuMcMa15,YangRuSe16} have tended to be more successful in escaping local minima. Our work builds specifically on that of \citet{YangRuSe16}. In particular, we use their efficient bit-vector representation and build on their bounds. Note that the 1995 RIPPER algorithm \cite{ripper} is similar to the Bayesian tree methods in that it grows, prunes, and then locally optimizes.
 
 \textit{Rule learning methods:} 
 Most rule learning methods are not designed for optimality or interpretability, but for computational speed and/or accuracy. In \textit{associative classification} \citep{Vanhoof10,Liu98,Li01,Yin03}, classifiers are often formed greedily from the top down as rule lists, or they are formed by taking the simple union of pre-mined rules, whereby any observation that fits into any of the rules is classified as positive. In \textit{inductive logic programming} \citep{muggleton1994inductive}, algorithms form disjunctive normal form patterns via a set of operations (rather than using optimization). These approaches are not appropriate for obtaining a guarantee of optimality. Methods for decision list learning construct rule lists iteratively in a greedy way
